--- a/Models/sql_ml_model.ipynb
+++ b/Models/sql_ml_model.ipynb
@@ -3784,13 +3784,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "WBjk0Hga_lIJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd930d9c-47ec-4472-8424-2583dd1c9014"
+        "outputId": "8323198c-6da1-473f-ebac-e2a666e58f8f"
       },
       "outputs": [
         {
@@ -3818,13 +3818,14 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
-        "from scipy.stats import zscore"
+        "from scipy.stats import zscore\n",
+        "from google.colab import drive"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
+        "# For google colab and drive only\n",
         "drive.mount('/content/drive')"
       ],
       "metadata": {
@@ -3857,7 +3858,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Init df (please change the file path to your own for all the following codes)\n",
+        "# Init df (please change the file path to your own path that store the csv files for all the following codes)\n",
         "df = pd.read_csv('/content/drive/My Drive/Colab Notebooks/query_exec_times.csv')\n",
         "# Clean the query format\n",
         "df['SQL_query'] = df['SQL_query'].apply(lambda x: re.sub(r'\\s+', ' ', x.strip()))\n",
@@ -4282,7 +4283,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load model for embeddings (here we use the sentence transformer )\n",
+        "# Load model for embeddings (here we use the sentence transformer)\n",
         "model = SentenceTransformer(\"s2593817/sft-sql-embedding\")"
       ],
       "metadata": {
@@ -5475,8 +5476,6 @@
         "index_test = test_df['if_indexed'].values.reshape(-1, 1)\n",
         "y_test = test_df['execution time (ms)'].values\n",
         "\n",
-        "# Normalize the target variable\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "\n",
         "y_train_scaled = scaler.fit_transform(y_train.reshape(-1, 1)).flatten()\n",
@@ -5702,7 +5701,7 @@
         "excluded_queries = excluded_ids + excluded_variations\n",
         "\n",
         "train_df = df[~df['query_id'].isin(excluded_queries)]  # Exclude queries for training\n",
-        "test_df = df[df['query_id'].isin(excluded_queries)]   # Use excluded queries for testing\n",
+        "test_df = df[df['query_id'].isin(excluded_queries)]\n",
         "print(train_df.shape)\n",
         "print(test_df.shape)"
       ],
@@ -5735,9 +5734,6 @@
         "X_test = np.vstack(test_df['query_embedding'].to_numpy())\n",
         "index_test = test_df['if_indexed'].values.reshape(-1, 1)\n",
         "y_test = test_df['execution time (ms)'].values\n",
-        "\n",
-        "# Normalize the target variable\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "\n",
         "y_train_scaled = scaler.fit_transform(y_train.reshape(-1, 1)).flatten()\n",
@@ -5767,7 +5763,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initialize the RNN model, loss function, and optimizer\n",
+        "# Init the RNN model, loss function, and optimizer\n",
         "model = RNNPredictor(input_size, hidden_size, num_layers)\n",
         "criterion = nn.MSELoss()\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -5997,7 +5993,6 @@
         "X = np.vstack(df['query_embedding'].to_numpy())\n",
         "index_feature = df['if_indexed'].values.reshape(-1, 1)\n",
         "y = df['execution time (ms)'].values\n",
-        "# Normalize y\n",
         "scaler = StandardScaler()\n",
         "y_scaled = scaler.fit_transform(y.reshape(-1, 1)).flatten()\n",
         "\n",
